--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <!-- MySQL Connector -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.27</version>
+    </dependency>
   </dependencies>
 
   <build>
